--- a/eventApp/public/css/style.css
+++ b/eventApp/public/css/style.css
@@ -8,3 +8,19 @@
     margin-top: 5px;
     margin-right: 5px;
 }
+.container {
+    margin-top: 70px;
+    text-align: center;
+}
+.footer {
+    text-align: center;
+    bottom: 0;
+    left: 0;
+    height: 40px;
+    position: fixed;
+    width: 100%;
+}
+div.alert {
+    text-align: center;
+    margin: 40px;
+}
