--- a/eventApp/public/css/style.css
+++ b/eventApp/public/css/style.css
@@ -1,7 +1,11 @@
 .navbar {
-    height: 47px;
+    height: 50px;
     border-radius: 0px 0px 10px 10px;
     box-shadow: 0 0 1em black;
+}
+.navbar-brand{
+    margin-top: 10px;
+    font-size: 20px;
 }
 .logs-position {
     position: absolute;
