--- a/eventApp/public/css/style.css
+++ b/eventApp/public/css/style.css
@@ -1,6 +1,5 @@
 .navbar {
     height: 50px;
-    border-radius: 0px 0px 10px 10px;
     box-shadow: 0 0 1em black;
 }
 .navbar-brand{
@@ -23,10 +22,12 @@
     bottom: 0;
     left: 0;
     height: 10px;
-    position: fixed;
     width: 100%;
 }
 div.alert {
     text-align: center;
     margin: 40px;
+}
+.imgFundo {
+    width: 100%;
 }
