--- a/eventApp/public/css/style.css
+++ b/eventApp/public/css/style.css
@@ -22,24 +22,48 @@
     text-align: center;
 }
 
-.footer {
-    text-align: center;
-    width: 100%;
-    height: 40px;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-}
-
 div.alert {
     text-align: center;
     margin: 40px;
 }
 
-.imgFundo {
-    width: 100%;
+.margin {
+    padding-top: 20px;
 }
+
+
+/* .imgFundo {
+    width: 100%;
+} */
 
 .mars {
     width: 3%;
+}
+
+.center {
+    padding-top: 20px;
+    text-align: center;
+}
+
+.card-box {
+    padding-left: 120px;
+}
+
+#card {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 250px;
+    width: 250px;
+    padding: 20px;
+    margin-left: 10px;
+    display: inline-block;
+}
+
+.footer {
+    position: static;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
 }
