--- a/eventApp/public/css/vereventos/index.css
+++ b/eventApp/public/css/vereventos/index.css
@@ -70,7 +70,9 @@ div.alert {
     display: inline-block;
 }
 
-footer {
+.footer {
+    background-color: #4582ec;
     text-align: center;
-    /* padding: 20px; */
+    height: 50px;
+    box-shadow: 0 0 1em black;
 }
