--- a/eventApp/public/css/vereventos/index.css
+++ b/eventApp/public/css/vereventos/index.css
@@ -59,15 +59,20 @@ div.alert {
     padding-left: 120px;
 }
 
+img {
+    width: 100%;
+    border-top-left-radius: calc(.25rem -1px);
+    border-top-right-radius: calc(.25rem -1px);
+}
+
 #card {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 250px;
     width: 250px;
-    padding: 20px;
-    margin-left: 10px;
     display: inline-block;
+    flex: 1 1 24%;
+    max-width: 25%;
+    border-radius: 10px;
+    padding: 0;
+    margin: .5%;
 }
 
 .footer {
