--- a/eventApp/public/css/dashboard/index.css
+++ b/eventApp/public/css/dashboard/index.css
@@ -56,6 +56,16 @@ div.alert {
     text-align: center;
 }
 
+.msg {
+    background-color: #D4EDDA;
+    color: #155724;
+    border: 1px solid #C3E6CB;
+    width: 100%;
+    margin-bottom: 0;
+    text-align: center;
+    padding: 10px;
+}
+
 .card-box {
     padding-left: 120px;
 }
